--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    <com.amap.api.maps.MapView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+    
 
 </RelativeLayout>
